# waypoints

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  token-counter-20260115-000900.genspec.jsonl
.beads/: issues.jsonl  sync_base.jsonl
Formula/: waypoints.rb
docs/: README.md  architecture-roadmap.md  claude-review.md  codex-refactor-02052026.md  codex-review-01082026.md  current-state.md  domain-model-ubiquitous-language.md  fly-main-decomposition-plan-2026-02-11.md  fly-token-usage-analysis-2026-02-06.md  genspec-format.md  homebrew-packaging.md  idea.md  journey-state-machine.md  multi-agent-waypoint-implementation-plan-2026-02-11.md  product-spec.md  project-memory-index.md  protocol-v1.md  runtime-architecture.md  shortcomings-remediation-baseline-2026-02-07.md  testing-strategy.md  timeout-policy.md  unix-architecture-plan.md  waypoint-spec-context-checklist.md  waypoint-spec-context-lifecycle.md
scripts/: run_flight_test.py  run_flight_tests.py  test_chart_screen.py  test_fly_screen.py  test_git_integration.py  test_sdk.py  test_waypoint_gen.py  update_homebrew_formula.sh
tests/: conftest.py  test_anthropic_provider.py  test_api_errors.py  test_architecture_boundaries.py  test_chart_retry.py  test_cli_parser.py  test_command_runner.py  test_context_envelope.py  test_coordinator.py  test_coordinator_fly.py  test_escalation_policy.py  test_execution_controller.py  test_execution_log.py  test_executor.py  test_flight_test_runner.py  test_flight_tests_runner.py  test_fly_controller.py  test_fly_covenant.py  test_fly_git.py  test_fly_guidance_runtime.py  test_fly_metrics.py  test_fly_phase.py  test_fly_presenter.py  test_fly_progress.py  test_fly_projections.py  test_fly_protocol.py  test_fly_screen.py  test_fly_service.py  test_fly_skills.py  test_genspec.py  test_genspec_bundle.py  test_genspec_iteration_requests.py  test_git.py  (+37 more)
(+194 files in other folders)
