[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waypoints"
version = "0.1.0"
description = "AI-native software development environment"
requires-python = ">= 3.14"
dependencies = [
    "textual>=0.50.0",
    "claude-agent-sdk>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov", 
    "black",
    "ruff",
    "mypy"
]

[project.scripts]
waypoints = "waypoints:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/waypoints --cov-report=term-missing"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
