[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waypoints"
version = "0.1.0"
description = "AI-native software development environment"
requires-python = ">= 3.14"
dependencies = [
    "textual>=0.50.0",
    "claude-agent-sdk>=0.1.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "attrs>=23.0.0",
]

[project.scripts]
waypoints = "waypoints:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/waypoints --cov-report=term-missing"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "types-pyyaml>=6.0.12.20250915",
    "types-jsonschema>=4.23.0.20241208",
]
